# clipnship

./: README.md  clipboard.py  pyproject.toml
.github/workflows/: tests.yml
tests/: test_clipboard.py
