[project]
name = "clipnship"
version = "0.1.0"
description = ""
authors = [
    {name = "joshuazhang10",email = "joshuazhangus@gmail.com"}
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pywin32 (>=311,<312)",
    "pystray (>=0.19.5,<0.20.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
